# UBB-Informatica

./: README.md  Semestrul 1
1st Year/1st Semester/ASC/: lab1.asm
1st Year/1st Semester/ASC/Alte_Exercitii/: preg2.asm  preg3.asm  preg4.asm  (+4 more)
1st Year/1st Semester/FP/: FP.docx  lab4-6.docx  lab7doc.docx
1st Year/2nd Semester/OOP/Laborator/Lab6-7/: Activitate.cpp  Activitate.h  ActivitateService.cpp  ActivitateService.h  CMakeLists.txt  main.cpp  program  repository.cpp  repository.h  testeVD.cpp  ui.cpp  ui.h  ui.h.gch  vectordinamic.h
1st Year/2nd Semester/OOP/Laborator/Lab8-9/: Activitate.h  ActivitateService.cpp  ActivitateService.h  CMakeLists.txt  ListaActivitati.cpp  ListaActivitati.h  Undo2.h  export.cpp  export.h  main.cpp  program  repository.cpp  repository.h  test.txt  testExport.cvs  testExport.html  ui.cpp  ui.h  validators.h
1st Year/2nd Semester/OOP/Seminar/Seminar2_GestiuneMelodii_AlocareDinamica/: CMakeLists.txt  Seminar2_GestiuneMelodii_AlocareDinamica.vcxproj  Seminar2_GestiuneMelodii_AlocareDinamica.vcxproj.filters  melodie.c  melodie.h  mylist.c  mylist.h  service.c  service.h  ui.c  validator.c  validator.h
1st Year/2nd Semester/OOP/Seminar/Seminar2_GestiuneMelodii_AlocareDinamica/x64/Debug/: Seminar2_GestiuneMelodii_AlocareDinamica.exe.recipe  Seminar2_GestiuneMelodii_AlocareDinamica.ilk  vc143.idb
1st Year/2nd Semester/OOP/Seminar/Seminar2_GestiuneMelodii_AlocareDinamica/x64/Debug/Seminar2.887e3827.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Seminar2_GestiuneMelodii_AlocareDinamica.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
1st Year/2nd Semester/OOP/Seminar/Seminar3_GestiuneMelodii_CPP2/: CMakeLists.txt
1st Year/2nd Semester/SDA/Laborator/SDA-LAB3-EX15/: CMakeLists.txt  Dictionar.cpp  Dictionar.h  IteratorDictionar.cpp  IteratorDictionar.h  TestScurt.cpp
1st Year/2nd Semester/SDA/Laborator/SDA_LAB_4/: App.cpp  CMakeLists.txt  IteratorMD.cpp  IteratorMD.h  MD.cpp  MD.h  TestExtins.cpp  TestScurt.cpp
1st Year/2nd Semester/SDA/Laborator/lab1ex5SDA/: CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  TestExtins.cpp  TestScurt.cpp  interfata.txt
1st Year/2nd Semester/Sisteme Dinamice/: exersat.mw  laborator1.mw  laborator2.mw  laborator3.mw  laborator4.mw  laborator5.mw  laborator6.mw
2nd Year/1st Semester/: README.md
2nd Year/1st Semester/Baze de date/: Practic.sql  README.md
2nd Year/1st Semester/MAP/: README.md
2nd Year/1st Semester/PLF/: PREG_PRACTIC.lsp  README.md  preg_practic.pl  testLisp.lsp
2nd Year/1st Semester/Retele de calculatoare/: Cisco.txt  ImpartireAdreseRetea.txt  ReteaCalculatoare.pkt  ReteaLaborator.pkt
2nd Year/2nd Semester/Ingineria sistemelor soft/: Farmacie Spital.docx  README.md
2nd Year/2nd Semester/Programare Web/: HTTP_lab9_224_2.docx
2nd Year/2nd Semester/Sisteme de gestiune a bazelor de date/: DeadlockT1.sql  DeadlockT2.sql  DirtyReadsT1.sql  DirtyReadsT2sql.sql  Lab3.sql  PhantomReadsT1.sql  PhantomReadsT2.sql  UnrepeatableReadsT1.sql  UnrepeatableReadsT2.sql
3rd Year/LFTC/Lab1/: CMakeLists.txt  FIP.cpp  FIP.h  TS.cpp  TS.h  main.cpp  main2.cpp  mainPart3.cpp
3rd Year/LFTC/Lab1/AutomateFinite/: AFBin.cpp  AFDec.cpp  AFDec.h  AFIdentificatori.cpp  AFReal.cpp
3rd Year/LFTC/Lab1/files/: keywords.txt  program.txt  programNoSpaces.txt
3rd Year/LFTC/Lab2/: AF.txt  BNF.txt  CMakeLists.txt  cst.txt  main.cpp
3rd Year/LFTC/Lab3/: FIP.cpp  FIP.h  TS.cpp  TS.h  main.l
3rd Year/PDM/: README.md
3rd Year/PPD/: Barrier - C++ implementation.docx  DocumentatieLab1.docx  DocumentatieLab2.docx  L2_utils.docx  Laborator1.docx  Laborator2.docx  Laborator3.docx  Laborator4.docx  Laborator5.docx
3rd Year/PPD/Cursuri/: MPI Communication Modes.docx
3rd Year/PPD/Laborator/Lab3/: CMakeLists.txt  docLab3.docx
3rd Year/PPD/Windows/: Rularea scripturilor PowerShell.docx
(+973 files in other folders)
