cmake_minimum_required(VERSION 3.27)
project(OOP_LAB_6_7)

set(CMAKE_CXX_STANDARD 17)

add_executable(OOP_LAB_6_7 main.cpp
        Activitate.cpp
        Activitate.h
        repository.cpp
        repository.h
        ActivitateService.cpp
        ActivitateService.h
        ui.cpp
        ui.h
        Activitate.cpp
        ListaActivitati.cpp
        ListaActivitati.h
        validators.h
        export.cpp
        export.h
        Undo2.h
)
