cmake_minimum_required(VERSION 3.27)
project(SDA_LAB3_EX15)

set(CMAKE_CXX_STANDARD 17)

add_executable(SDA_LAB3_EX15
        App.cpp
        Dictionar.cpp
        IteratorDictionar.cpp
        TestExtins.cpp
        TestScurt.cpp
        Dictionar.h
        IteratorDictionar.h
        TestExtins.h
        TestScurt.h)
