cmake_minimum_required(VERSION 3.27)
project(lab1ex5)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab1ex5
        Colectie.cpp
        Colectie.h
        IteratorColectie.cpp
        IteratorColectie.h
        App.cpp
        TestExtins.cpp
        TestExtins.h
        TestScurt.cpp
        TestScurt.h)
